# sale-prebook

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
sale_exception_stock_prebook/: README.rst  __manifest__.py
sale_exception_stock_prebook/i18n/: it.po
sale_exception_stock_prebook/static/description/: index.html
sale_stock_prebook/: README.rst  __manifest__.py  hooks.py
sale_stock_prebook/i18n/: it.po  sale_stock_prebook.pot
sale_stock_prebook/models/: __init__.py  sale_order.py  stock_move.py  stock_rule.py
sale_stock_prebook/readme/: CONTRIBUTORS.md  USAGE.md
sale_stock_prebook/report/: stock_forecasted.py
sale_stock_prebook/static/description/: index.html
sale_stock_prebook/tests/: common.py  test_sale_stock_prebook.py
sale_stock_prebook/views/: sale_views.xml  stock_route_views.xml  stock_rule_views.xml
sale_stock_prebook_cancel_line/: README.rst  __manifest__.py
sale_stock_prebook_cancel_line/i18n/: it.po
sale_stock_prebook_cancel_line/models/: sale_order_line.py
sale_stock_prebook_cancel_line/readme/: CONTRIBUTORS.md
sale_stock_prebook_cancel_line/tests/: test_sale_stock_prebook_cancel_line.py
sale_stock_prebook_stock_available_to_promise_release/: README.rst  __manifest__.py
sale_stock_prebook_stock_available_to_promise_release/i18n/: sale_stock_prebook_stock_available_to_promise_release.pot
sale_stock_prebook_stock_available_to_promise_release/models/: sale_order.py  stock_move.py
sale_stock_prebook_stock_available_to_promise_release/readme/: DESCRIPTION.md
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+4 files in other folders)
