[project]
name = "odoo-addons-oca-sale-prebook"
version = "18.0.20260503.0"
dependencies = [
    "odoo-addon-sale_stock_prebook==18.0.*",
    "odoo-addon-sale_stock_prebook_stock_available_to_promise_release==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
